fix menu overlap with bsd

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -49,9 +49,7 @@
     }
 
     @include media-query($on-palm) {
-        position: absolute;
-        top: 9px;
-        right: 30px;
+        margin-top: 9px;
         background-color: $background-color;
         border: 1px solid $grey-color-light;
         border-radius: 5px;
@@ -78,6 +76,7 @@
 
         .trigger {
             clear: both;
+            float: right;
             display: none;
         }
 
